# QuickerCleaner_v2

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  QUICK_START.md  README.md  SECURITY.md  build.py  demo.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  release.yml
Documentation/: CHANGELOG.md  LICENSE.txt  README.md
quickercleaner/: __init__.py  __main__.py  cleaner.py  config.py  gui.py  main.py
tests/: __init__.py  test_cleaner.py  test_config.py  test_gui.py
